Downgrade core module to java 8. Allow using different java versions for different modules